<resources>
    <string name="app_name">WAY?</string>

    <!--메인 화면-->

    <!--도전 과제-->
    <string name="chlng1">Welcome!</string>
    <string name="chlng1_detail">처음 앱 접속</string>
    <string name="chlng2">The Great First Step!</string>
    <string name="chlng2_detail">처음 여행</string>
    <string name="chlng3">First Asia!</string>
    <string name="chlng3_detail">첫 아시아 여행</string>
    <string name="chlng4">First Europe!</string>
    <string name="chlng4_detail">첫 유럽 여행</string>
    <string name="chlng5">First America!</string>
    <string name="chlng5_detail">첫 아메리카 여행</string>
    <string name="chlng6">First Australia</string>
    <string name="chlng6_detail">첫 오스트레일리아 여행</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>