<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/chlng_button_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ChallengeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/chlng1"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:enabled="true"
            android:padding="10dp"
            android:text="@string/chlng1"
            android:textAlignment="center"

            android:textSize="20sp" />

        <Button
            android:id="@+id/chlng2"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:enabled="false"
            android:padding="10dp"
            android:text="@string/chlng2"
            android:textAlignment="center"

            android:textSize="20sp" />

        <Button
            android:id="@+id/chlng3"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:enabled="false"
            android:padding="10dp"
            android:text="@string/chlng3"
            android:textAlignment="center"

            android:textSize="20sp" />

        <Button
            android:id="@+id/chlng4"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:enabled="false"
            android:padding="10dp"
            android:text="@string/chlng4"
            android:textAlignment="center"

            android:textSize="20sp" />

        <Button
            android:id="@+id/chlng5"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:enabled="false"
            android:padding="10dp"
            android:text="@string/chlng5"
            android:textAlignment="center"

            android:textSize="20sp" />

        <Button
            android:id="@+id/chlng6"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:enabled="false"
            android:padding="10dp"
            android:text="@string/chlng6"
            android:textAlignment="center"

            android:textSize="20sp" />

    </LinearLayout>


    <include layout="@layout/menu_challenge_bottomsheet"/>


</androidx.coordinatorlayout.widget.CoordinatorLayout>